--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="pt-br">
 	<head>
     <meta charset="utf-8" />
 		<title>Orçamento pessoal</title>
@@ -54,11 +55,6 @@
         <div class="col-md-2">
           <select class="form-control" id="ano">
             <option value="">Ano</option>
-            <option value="2018">2018</option>
-            <option value="2019">2019</option>
-            <option value="2020">2020</option>
-            <option value="2021">2021</option>
-            <option value="2022">2022</option>
             <option value="2023">2023</option>
             <option value="2024">2024</option>
           </select>
