--- a/index.html
+++ b/index.html
@@ -112,44 +112,24 @@
     </div>
 
     <!-- Modal -->
-    <div class="modal fade" id="erroGravacao" tabindex="-1" role="dialog" aria-labelledby="TituloModalCentralizado" aria-hidden="true">
+    <div class="modal fade" id="modalRegistroDespesa" tabindex="-1" role="dialog" aria-labelledby="TituloModalCentralizado" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title text-danger" id="TituloModalCentralizado">Erro na Gravacao</h5>
+          <div id="modal_titulo_div">
+            <h5 class="modal-title" id="modal_titulo"></h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
-          <div class="modal-body">
-            Existem campos obrigatorios que nao foram preenchidos
+          <div class="modal-body" id="modal_conteudo">
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-danger "data-dismiss="modal">Voltar e corrigir</button>
+            <button type="button" data-dismiss="modal" id="modal_btn"></button>
           </div>
         </div>
       </div>
     </div>  
 
-    <!-- Modal -->
-    <div class="modal fade" id="sucessoGravacao" tabindex="-1" role="dialog" aria-labelledby="TituloModalCentralizado" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title text-success" id="TituloModalCentralizado">Registro inserido com sucesso</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            Despesa foi cadastrada com sucesso!
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-success "data-dismiss="modal">Voltar</button>
-          </div>
-        </div>
-      </div>
-    </div>  
   </body>	
 
 </html>
